--- a/packages/build-v2/package.json
+++ b/packages/build-v2/package.json
@@ -9,5 +9,8 @@
     "vite": "^4.0.4",
     "vue": "^2.7.14",
     "vue-demi": "^0.13.11"
+  },
+  "dependencies": {
+    "scope-ui": "workspace:*"
   }
 }
