--- a/packages/build-v2/package.json
+++ b/packages/build-v2/package.json
@@ -4,7 +4,7 @@
     "build": "node build.js"
   },
   "devDependencies": {
-    "@scope/components": "workspace:^0.0.0",
+    "@scope/components": "workspace:*",
     "@vitejs/plugin-vue2": "^2.2.0",
     "vite": "^4.0.4",
     "vue": "^2.7.14",
