--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,13 +4,23 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:2": "vue-demi-switch 2.7 vue2 & vitest --mode test:2",
+    "test:3": "vue-demi-switch 3 &vitest --mode test:3"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vue/test-utils": "^2.2.8",
+    "@vue/test-utils-v2": "npm:@vue/test-utils@^1.3.0",
+    "jsdom": "^21.1.0",
+    "vite": "^4.0.4",
+    "vitest": "^0.28.3",
     "vue": "^3.2.45",
-    "vue-demi": "^0.13.11"
+    "vue-demi": "^0.13.11",
+    "vue-template-compiler": "^2.7.14",
+    "vue2": "npm:vue@^2.7.14"
   }
 }
