--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,3 +1,9 @@
 {
-    "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "jsx": "preserve",
+    "types": ["vitest/globals"]
+  }
 }
