--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "url": "https://github.com/enpitsuLin/demi-ui-template"
   },
   "scripts": {
-    "build": "pnpm --filter \"./packages/build-*\" build"
+    "build": "pnpm run -C internal/build start"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vue": "^3.2.45",
+    "vue2": "npm:vue@^2.7.14"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@vitejs/plugin-vue2@2.2.0": "patches/@vitejs__plugin-vue2@2.2.0.patch"
+    }
   }
 }
