--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,7 +20,7 @@
     "vitest": "^0.28.3",
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
-    "vue-template-compiler": "^2.7.14",
+    "vue-template-compiler": "2.7.14",
     "vue2": "npm:vue@^2.7.14"
   }
 }
