--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,9 +1,6 @@
 {
+  "extends": "@demi-ui/tsconfig/browser.json",
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "jsx": "preserve",
     "types": ["vitest/globals"]
   }
 }
