--- a/packages/demi-ui/package.json
+++ b/packages/demi-ui/package.json
@@ -1,9 +1,43 @@
 {
   "name": "demi-ui",
   "version": "0.0.1",
-  "main": "index.js",
-  "module": "index.mjs",
+  "description": "A Universal UI library for Vue 2.7 & 3",
+  "keywords": [
+    "component library",
+    "ui",
+    "ui library",
+    "vue"
+  ],
+  "main": "lib/v{{version}}/index.js",
+  "module": "es/v{{version}}/index.mjs",
+  "exports": {
+    ".": {
+      "import": "./es/v{{version}}/index.mjs",
+      "require": "./lib/v{{version}}/index.js"
+    },
+    "./es": "./es/v{{version}}/index.mjs",
+    "./lib": "./lib/v{{version}}/index.js",
+    "./es/*.mjs": "./es/v{{version}}/*.mjs",
+    "./es/*": "./es/v{{version}}/*.mjs",
+    "./lib/*.js": "./lib/v{{version}}/*.js",
+    "./lib/*": "./lib/v{{version}}/*.js",
+    "./*": "./*"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "postinstall": "node ./scripts/postinstall.js"
+  },
   "devDependencies": {
     "vue-demi": "^0.13.11"
+  },
+  "peerDependencies": {
+    "vue": ">=3.0.0 || >=2.7.0",
+    "vue-demi": "latest"
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.0",
+    "mustache": "^4.2.0"
   }
 }
