--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-template-compiler": "2.7.14",
+    "vue-tsc": "^1.0.24",
     "vue2": "npm:vue@^2.7.14"
   }
 }
