--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "@demi-ui/tsconfig/browser.json",
   "include": ["index.ts", "**/*.ts"],
+  "exclude": ["dist", "**/__test__"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
