--- a/packages/components/tsconfig.build.json
+++ b/packages/components/tsconfig.build.json
@@ -1,5 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "include": ["index.ts", "**/*.ts"],
+  "compilerOptions": {
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "outDir": "../../dist/demi-ui/types/"
+  },
   "exclude": ["dist", "**/__test__", "vitest.config.ts"]
 }
