--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "rimraf": "^4.1.2",
     "typescript": "^4.9.4",
     "vue": "^3.2.45",
     "vue2": "npm:vue@^2.7.14"
