fix: include *.vue file

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@demi-ui/tsconfig/browser.json",
-  "include": ["index.ts", "**/*.ts"],
+  "include": ["index.ts", "**/*.ts", "**/*.vue"],
   "exclude": ["dist", "**/__test__"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
