--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@demi-ui/eslint-config": "workspace:*",
     "eslint": "^8.33.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.4",
@@ -51,5 +52,8 @@
         "prettier"
       ]
     }
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,jsx,tsx}": "eslint --fix"
   }
 }
