chore: disable vitest global mode

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "@demi-ui/tsconfig/browser.json",
   "include": ["index.ts", "**/*.ts", "**/*.vue"],
-  "exclude": ["dist", "**/__test__"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "exclude": ["dist"]
 }
