chore: move all components path

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@demi-ui/tsconfig/browser.json",
-  "include": ["index.ts", "**/*.ts", "**/*.vue"],
+  "include": ["src/index.tsx.ts", "**/*.ts", "**/*.vue"],
   "exclude": ["dist"]
 }
