--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -14,5 +14,8 @@
     "@pnpm/types": "^8.10.0",
     "@types/node": "^18.11.18",
     "unbuild": "^1.1.1"
+  },
+  "dependencies": {
+    "@pnpm/logger": "^5.0.0"
   }
 }
