--- a/internal/eslint-config/package.json
+++ b/internal/eslint-config/package.json
@@ -16,5 +16,10 @@
     "eslint-define-config": "^1.14.0",
     "eslint-plugin-prettier": "^4.2.1",
     "vue-eslint-parser": "^9.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4"
   }
 }
