--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -9,7 +9,7 @@
     "stub": "unbuild --stub"
   },
   "devDependencies": {
-    "@demi-ui/tsconfig": "workspace:^0.0.0",
+    "@demi-ui/tsconfig": "workspace:*",
     "@pnpm/find-workspace-packages": "^5.0.30",
     "@pnpm/types": "^8.10.0",
     "@types/node": "^18.11.18",
