--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "enpitsulin <enpitsulin@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@demi-ui/eslint-config": "workspace:*",
