--- a/packages/components/tsconfig.build.json
+++ b/packages/components/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "include": ["index.ts", "**/*.ts"],
   "compilerOptions": {
-    "outDir": "../../dist/demi-ui/types/"
+    "outDir": "../demi-ui/release/types"
   },
   "exclude": ["dist", "**/__test__", "vitest.config.ts"]
 }
