fix: no version field cause changeset error

--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@demi-ui/build-utils",
   "private": true,
+  "version": "0.0.1",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./src/index.ts",
