build: build release package for publish

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,8 +7,5 @@
   "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
-  "ignore": [],
-  "publishConfig": {
-    "directory": "./release"
-  }
+  "ignore": []
 }
