--- a/packages/demi-ui/package.json
+++ b/packages/demi-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demi-ui",
-  "version": "0.0.1",
+  "version": "0.0.1-test.2",
   "description": "A Universal UI library for Vue 2.7 & 3",
   "keywords": [
     "component library",
@@ -26,7 +26,8 @@
     "./*": "./*"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "./release"
   },
   "scripts": {
     "clean": "rm -rf release"
