--- a/packages/components/tsconfig.build.json
+++ b/packages/components/tsconfig.build.json
@@ -4,5 +4,5 @@
   "compilerOptions": {
     "outDir": "../demi-ui/release/types"
   },
-  "exclude": ["dist", "**/__test__", "vitest.config.ts"]
+  "exclude": ["dist", "**/__test__", "vitest.config.ts", "setup.ts"]
 }
